--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Polity-Correct</string>
-    <string name="btnLogin">בית</string>
+    <string name="btnLogin">התחבר</string>
     <string name="account_mail">מייל</string>
     <string name="password">סיסמא</string>
     <string name="confirmPass">אימות סיסמה</string>
