--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
     <string name="account_mail">מייל</string>
     <string name="password">סיסמא</string>
     <string name="confirmPass">אימות סיסמה</string>
+    <string name="send">שלח</string>
+    <string name="rateTheVote">עד כמה חוק זה חשוב לך?</string>
+    <string name="Against">נגד</string>
+    <string name="Noun">נמנע</string>
+    <string name="pro">בעד</string>
+    <string name="details">תיאור ופירוט</string>
 </resources>
