--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="send">שלח</string>
     <string name="rateTheVote">עד כמה חוק זה חשוב לך?</string>
     <string name="Against">נגד</string>
-    <string name="Noun">נמנע</string>
+    <string name="impossible">נמנע</string>
     <string name="pro">בעד</string>
     <string name="details">תיאור ופירוט</string>
 </resources>
