Design average in statistics page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,7 +49,7 @@
     <string name="ok">אישור</string>
     <string name="votes_of">התפלגות ההצבעות לפי:</string>
     <string name="connect_us">צור קשר</string>
-    <string name="average">ממוצע</string>
+    <string name="average">ממוצע דירוג החוק</string>
     <string name="menu_home">דף הבית</string>
     <string name="statistics">סטטיסטיקות</string>
     <string name="vote_for_prop">הצבע לחוק</string>
