Page result citizens, Nav menu work in MatchParliament

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="all_citizen">כלל האזרחים</string>
     <string name="my_pg">המפלגה שלי</string>
     <string name="vote_here">הצבע כאן!</string>
-    <string name="final_results">תוצאות האמת</string>
+    <string name="result_citizens">הצבעות האזרחים</string>
     <string name="update_settings">עדכון פרטים</string>
     <string name="show_propositions">צפה בחוקים</string>
     <string name="change_pass">החלף סיסמא</string>
