--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,5 @@
     <string name="loading">רק רגע..\nאנחנו חושבים</string>
     <string name="matching">הנה ההתאמה שמצאנו עבורך:</string>
     <string name="chart_label">התפלגות ההתאמות</string>
+    <string name="all_users">כל המשתמשים</string>
 </resources>
